# erl_playground_client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
proto/: erl_playground.pb.cc  erl_playground.pb.h  erl_playground.proto
src/: main.cpp
